include/maplibre_native_c/style.h

typedef uint64_t mln_style_id_list;
typedef struct mln_premultiplied_rgba8_image {
  uint32_t size;
  uint32_t width;
  uint32_t height;
  uint32_t stride;
  const uint8_t* pixels;
  size_t byte_length;
} mln_premultiplied_rgba8_image;
typedef struct mln_style_transition_options {
  uint32_t size;
  uint32_t fields;
  double duration_ms;
  double delay_ms;
  bool enable_placement_transitions;
} mln_style_transition_options;
MLN_API mln_status mln_map_set_image_source_image(
  mln_map map, mln_buffer_view source_id,
  const mln_premultiplied_rgba8_image* image
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_image_source_coordinates(
  mln_map map, mln_buffer_view source_id, const mln_lat_lng* coordinates,
  size_t coordinate_count
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_get_image_source_coordinates(
  mln_map map, mln_buffer_view source_id, mln_lat_lng* out_coordinates,
  size_t coordinate_capacity, size_t* out_coordinate_count, bool* out_found
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_add_hillshade_layer(
  mln_map map, mln_buffer_view layer_id, mln_buffer_view source_id,
  mln_buffer_view before_layer_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_add_color_relief_layer(
  mln_map map, mln_buffer_view layer_id, mln_buffer_view source_id,
  mln_buffer_view before_layer_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_add_location_indicator_layer(
  mln_map map, mln_buffer_view layer_id, mln_buffer_view before_layer_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_location_indicator_location(
  mln_map map, mln_buffer_view layer_id, mln_lat_lng coordinate, double altitude
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_location_indicator_bearing(
  mln_map map, mln_buffer_view layer_id, double bearing
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_location_indicator_accuracy_radius(
  mln_map map, mln_buffer_view layer_id, double radius
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_location_indicator_image_name(
  mln_map map, mln_buffer_view layer_id, uint32_t image_kind,
  mln_buffer_view image_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_add_style_layer_json(
  mln_map map, mln_buffer_view layer_json, mln_buffer_view before_layer_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_remove_style_layer(
  mln_map map, mln_buffer_view layer_id, bool* out_removed
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_style_layer_exists(
  mln_map map, mln_buffer_view layer_id, bool* out_exists
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_get_style_layer_type(
  mln_map map, mln_buffer_view layer_id, mln_buffer_view* out_layer_type,
  bool* out_found
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_list_style_layer_ids(
  mln_map map, mln_style_id_list* out_layer_ids
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_move_style_layer(
  mln_map map, mln_buffer_view layer_id, mln_buffer_view before_layer_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_get_style_layer_json(
  mln_map map, mln_buffer_view layer_id, mln_buffer* out_layer, bool* out_found
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_style_light_json(
  mln_map map, mln_buffer_view light_json
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_style_light_property(
  mln_map map, mln_buffer_view property_name, mln_buffer_view value
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_get_style_light_property(
  mln_map map, mln_buffer_view property_name, mln_buffer* out_value
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_style_transition_options(
  mln_map map, const mln_style_transition_options* options
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_get_style_transition_options(
  mln_map map, mln_style_transition_options* out_options
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_layer_property(
  mln_map map, mln_buffer_view layer_id, mln_buffer_view property_name,
  mln_buffer_view value
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_get_layer_property(
  mln_map map, mln_buffer_view layer_id, mln_buffer_view property_name,
  mln_buffer* out_value
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_layer_filter(
  mln_map map, mln_buffer_view layer_id, const mln_buffer_view* filter
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_get_layer_filter(
  mln_map map, mln_buffer_view layer_id, mln_buffer* out_filter
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_layer_source_layer(
  mln_map map, mln_buffer_view layer_id, mln_buffer_view source_layer
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_copy_layer_source_layer(
  mln_map map, mln_buffer_view layer_id, char* out_source_layer,
  size_t source_layer_capacity, size_t* out_source_layer_size
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_layer_source_id(
  mln_map map, mln_buffer_view layer_id, mln_buffer_view source_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_copy_layer_source_id(
  mln_map map, mln_buffer_view layer_id, char* out_source_id,
  size_t source_id_capacity, size_t* out_source_id_size
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_layer_min_zoom(
  mln_map map, mln_buffer_view layer_id, double min_zoom
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_get_layer_min_zoom(
  mln_map map, mln_buffer_view layer_id, double* out_min_zoom
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_layer_max_zoom(
  mln_map map, mln_buffer_view layer_id, double max_zoom
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_get_layer_max_zoom(
  mln_map map, mln_buffer_view layer_id, double* out_max_zoom
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_layer_visibility(
  mln_map map, mln_buffer_view layer_id, uint32_t visibility
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_get_layer_visibility(
  mln_map map, mln_buffer_view layer_id, uint32_t* out_visibility
) MLN_NOEXCEPT;